--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@types/cors": "^2.8.17",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "cors": "^2.8.5",
     "mysql2": "^3.6.5",
     "prisma": "^5.7.1",
     "reflect-metadata": "^0.1.13",
