Add db to freedb (*comment)

--- a/.env
+++ b/.env
@@ -7,6 +7,8 @@
 
 DATABASE_URL="mysql://root:Kodilla2023!@localhost:3306/shoesdb"
 
+#DATABASE_URL="mysql://freedb_shoes_user_2024:EGVDKar648%24%3Fguv@sql.freedb.tech:3306/freedb_shoes_db_2024"
+
 JWT_SECRET="xrwe4543534"
 JWT_EXPIRES_IN="12h"
 
